@@ -1,0 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<uml:Package xmi:version="2.1" xmlns:xmi="http://schema.omg.org/spec/XMI/2.1" xmlns:uml="http://www.eclipse.org/uml2/3.0.0/UML" xmi:id="_EV7v8RvWEd-lK-Yjl_N2xQ" name="testpackage">
+  <packagedElement xmi:type="uml:Class" xmi:id="_HtFR8BvWEd-lK-Yjl_N2xQ" name="Class1"/>
+</uml:Package>
