@@ -1,1 +1,1 @@
-((new tudresden.ocl20.pivot.ocl2java.types.OclSet<tudresden.ocl20.pivot.examples.royalsandloyals.Transaction>((java.util.Set<tudresden.ocl20.pivot.examples.royalsandloyals.Transaction>) this.allInstances.get(tudresden.ocl20.pivot.examples.royalsandloyals.Transaction.class.getCanonicalName()).keySet())).size() > new Integer(0))
+((new tudresden.ocl20.pivot.ocl2java.types.OclSet<tudresden.ocl20.pivot.examples.royalsandloyals.Transaction>((java.util.Set<tudresden.ocl20.pivot.examples.royalsandloyals.Transaction>) allInstances.get(tudresden.ocl20.pivot.examples.royalsandloyals.Transaction.class.getCanonicalName()).keySet())).size() > new Integer(0))
